# algorithm-study

./: .gitignore  README_en.md  README_zh.md  Untitled.ipynb  pyproject.toml
dl/d2l/预备知识/: 概率.ipynb
dl/nlp/time_series_prediction/airline_passenger_pred/: evaluate.py  lgb_main.py
dl/nlp/transformer/: Decoder.py  Encoder.py  bert_nsp.ipynb  cast_several_feature_to_model.py  main.py  padding_mask.py  test.py  tokenize.ipynb  tokenizer.py  translate_task.py
dl/nlp/transformer/data/: data_fetch.py  data_load.py
dl/nlp/transformer/tokenize/: tokenizer.ipynb
dl/nlp/transformer/tokenizer/: added_tokens.json  tokenizer_config.json
dl/quickstart/: torch_demo.ipynb
dl/tft/: layer.py  tft.py
dl/transformer/: Decoder.py  Encoder.py  data_tokenize.py  lr_scheduler.py  lr_scheduler2.py  main.py
kaggle/sales-predict/: README.md  pyproject.toml
kaggle/sales-predict/conf/base/: logging.yml
kaggle/sales-predict/docs/source/: conf.py  index.rst
kaggle/sales-predict/src/: pyproject.toml
kaggle/sales-predict/src/sales_predict/: __init__.py  __main__.py  settings.py
kaggle/sales-predict/src/tests/: test_run.py
ml/ML_Notes/notebooks/: 05_线性模型_最大熵模型.ipynb
ml/notebooks/: 01_线性模型_线性回归_正则化(Lasso,Ridge,ElasticNet).ipynb  10_10_集成学习_xgboost_原理介绍及回归树的简单实现.ipynb
ml/概率论/: 贝叶斯后验.ipynb
notebook/: unname.ipynb
operation_research/benders_decomposition/: demo.ipynb  demo.py  demo_problem.md  pyproject.toml
operation_research/column_generation/: ColumnGeneration_CuttingStockProblem.ipynb
operation_research/lagrangian_relaxation/: demo.py
src/dl/nlp/ChatGLM2-6B/: test.py
src/dl/quickstart/: viz.py
src/dl/quickstart/viz/: events.out.tfevents.1707308563.FaizalFengdeMacBook-Pro.local.48528.0  events.out.tfevents.1707308842.FaizalFengdeMacBook-Pro.local.48528.1  events.out.tfevents.1707308866.FaizalFengdeMacBook-Pro.local.55254.0  events.out.tfevents.1707308869.FaizalFengdeMacBook-Pro.local.55254.1  (+6 more)
src/dl/time_series_prediction/: lstm_airline_predict.py  test.ipynb
src/notebook/: unname.ipynb
src/operation_research/benders_decomposition/: demo.ipynb  demo.py  demo_problem.md  master_problem.lp
src/operation_research/lagrangian_relaxation/: algorithm_principle.md
(+14 files in other folders)
