[tool.poetry]
name = "algorithm-study"
version = "0.1.0"
description = ""
authors = ["FaizalFeng <fzx401@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
d2l = "*"
ipykernel = "^6.29.4"
torch = "^2.3.0"
torchvision = "^0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
