[tool.poetry]
name = "algorithm-study"
version = "0.1.0"
description = ""
authors = ["JohnnsyFeng <fzx401@gmail.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "<2.0.0"
d2l = "*"
ipykernel = "^6.29.4"
torch = "^2.3.0"
torchvision = "^0.18.0"
huggingface = "^0.0.1"
datasets = "^2.20.0"
transformers = "^4.41.2"
tokenizers = "^0.19.1"
sentencepiece = "^0.2.0"
xgboost = "^2.1.0"
gradio = "^4.42.0"
mdtex2html = "^1.3.0"
lightgbm = "*"
graphviz = "^0.20.3"
kaggle = "^1.6.17"
loguru = "*"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

