[tool.poetry]
name = "benders-decomposition"
version = "0.1.0"
description = ""
authors = ["FaizalFeng <fzx401@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gurobipy = "^11.0"
numpy = "*"
pandas = "*"
matplotlib = "*"
loguru = "*"
scipy = "^1.12.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
